<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/loginParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
<!--logo-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@drawable/logo"
        android:padding="30dp"
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:layout_gravity="center"
        />
<!--    brand name-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="JoJo"
        android:layout_gravity="center_horizontal"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:fontFamily="@font/fontlogo"
        />
<!--    textview username-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="Email"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    
<!--    edittext username-->
    <EditText
        android:id="@+id/etusername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Email"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/roundcorners"
        android:drawableStart="@drawable/ic_baseline_email_24"
        />
<!--textview password-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="Password"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
<!--    edittext password-->
    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/roundcorners"
        android:drawableStart="@drawable/ic_baseline_lock_24"

        />
<!--    login button-->
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/loginbtnround"
        app:backgroundTint="#689DFF"
        android:text="Log In"
        android:textSize="20sp" />
    <!--    fogot password-->
<!--    stay logged in-->
<!--    sign up-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Don't have an account?"
            android:textColor="@color/black"
            />
        <!--    login-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/tvsignuplink"
            android:text="Sign up"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/tvtext"
            android:layout_marginLeft="10dp"
            />
    </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>