<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/productdetail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shop.ProductDetailActivity"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="@drawable/border"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/imgviewproductimg"
                />
            <!--    product name-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvproduct_name"
                android:textSize="15dp"
                android:textColor="@color/black"
                />

            <!--    product price-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvproduct_price"
                android:textSize="24dp"
                android:textColor="#0019FF"
                />

            <!--    product description-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:text="Description:"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvproductdescription"
                android:textSize="15dp"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:text="Quantity"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    >
                    <Button
                        android:id="@+id/btnminus"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="-"
                        android:backgroundTint="#F20C0C"
                        android:textSize="20dp"
                        />
                    <TextView

                        android:id="@+id/etquantity"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_toRightOf="@+id/btnminus"
                        android:textColor="@color/black"
                        android:textSize="25dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginTop="10dp"
                        android:text="1"
                        />
                    <Button
                        android:id="@+id/btnplus"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="+"
                        android:textSize="20dp"
                        android:layout_toRightOf="@+id/etquantity"
                        android:backgroundTint="#2EF10C"
                        />

                </RelativeLayout>

                <!--    add to cart button-->
                <Button
                    android:id="@+id/btnaddtocart"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="Add to Cart"
                    android:backgroundTint="#f15bb5"
                    />
                <!--    add to favorites button-->
                <Button
                    android:id="@+id/btnaddtofavs"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="Add to Favorites"
                    android:backgroundTint="#3a86ff"
                    android:layout_marginBottom="20dp"
                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
<!--    product image-->


</LinearLayout>