<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shop.PetItemFragment"
    android:id="@+id/petproductlayout"

    >
    <TextView
        android:id="@+id/showitem"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="Showing items"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"

        />
    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-127dp"
        android:background="#FFFFFF"
        android:fillViewport="true"
        android:id="@+id/cardproduct"

        >
        <!--    for recycler view-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.core.widget.NestedScrollView>



</FrameLayout>